--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,102 @@
-/* Змінні по коду */ 
+/* Скидання стандартних стилей */
+
+/*Обнуление*/
+html {
+    box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: inherit;
+}
+
+:focus,
+:active {
+    outline: none;
+}
+
+a:focus,
+a:active {
+    outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+    display: block;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    /* line-height: 1;
+    font-size: 14px; */
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+    font-family: inherit;
+}
+
+input::-ms-clear {
+    display: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+a,
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+ul li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6, 
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+/*--------------------*/
+
+/* Змінні по коду */
 
 :root {
-    --main-font: Roboto,sans-serif;
+    --main-font: Roboto, sans-serif;
 
     --main-color: #153C3C;
     --second-color: #84A17D;
@@ -9,12 +104,12 @@
     --header-color: #ADC9A6;
     --text-color: #172426;
     --header-text-color: #DDE4E4;
-    
+    --subtitle-btn-color: #F3F7F2;
+
 
     --card-color: #F2F8F8;
 
 }
-
 
 /* Базові стилі */
 
@@ -25,18 +120,22 @@ body {
 
 h1 {
     font-size: 63px;
+    font-weight: 400;
     line-height: 1.27;
+    letter-spacing: 2.88px;
     color: var(--text-color);
     text-align: center;
+    margin-bottom: 104px;
 }
 
 h2 {
     font-size: 51px;
+    font-weight: 400;
         line-height: 1.25;
         letter-spacing: 2.24px;
         color: var(--text-color);
         text-align: center;
-        
+       margin-bottom: 96px; 
 }
 
 h3 {
@@ -50,13 +149,16 @@ h3 {
 .btn {
     background-color: var(--second-color);
     color: var(--body-color);
+    border-radius: 4px;
+    min-width: 106px;
+    padding: 7px 24px 9px;
 
     font-size: 13px;
     line-height: 1.84;
     letter-spacing: 0.14px;
+    text-align: center;
 
     font-family: inherit;
-    cursor: pointer;
 }
 
 .btn:hover,
@@ -65,25 +167,25 @@ h3 {
     color: var(--main-color);
 }
 
-/* Скидання стандартних стилей */
 
-* {
-    margin: 0;
-    padding: 0;
-}
-.link {
-    text-decoration: none;
-}
-
-.list {
-    list-style: none;
-}
 
 /* Header */
-.header {}
+.container {
+    width: 1280px;
+    margin: 0 auto;
+}
+
+.star {
+    color: var(--main-color);
+}
 
 .header-star {
     background-color: var(--header-color);
+    padding-top: 8px;
+    padding-bottom: 8px;
+    display: flex;
+        justify-content: center;
+        
 }
 
 .header-star-text {
@@ -92,13 +194,17 @@ h3 {
         line-height: 2.18;
         letter-spacing: 0.24px;
         text-align: center;
+        max-width: 327px;
+        margin-left: 8px;
 }
 
 .header-nav {
     background-color: var(--main-color);
-}
-
-.link {}
+    padding-top: 28.5px;
+    padding-bottom: 29.5px;
+        outline: 2px rgb(168, 38, 38) solid;
+        margin-bottom: 112px;
+}  
 
 .header-link {
     color: var(--header-text-color);
@@ -110,20 +216,56 @@ h3 {
 
 .nav {}
 
-.list {}
 
-.header-list {}
+.header-list {
+    outline: 2px rgb(168, 38, 38) solid;
+}
 
 
 
 /* Main */
+.hero {
+    outline: 2px rgb(168, 38, 38) solid;
+    margin-bottom: 148px;
+}
 
 .subtitle {
+    display: block;
+    margin: 0 auto;
+    padding: 8px 16px;
     font-size: 18px;
     line-height: 1.77;
+    background-color: var(--subtitle-btn-color);
     color: var(--main-color);
     text-align: center;
     text-transform: uppercase;
+    
+    border-radius: 4px;
+    border: inherit;
+    min-width: 81px;
+    margin-bottom: 13px;
 }
 
+.leading {
+    outline: 2px rgb(168, 38, 38) solid;
+    text-align: center;
+    margin-bottom: 120px;
+}
+
+.company {
+    outline: 2px rgb(168, 38, 38) solid;
+    margin-bottom: 120px;
+}
+.blog {
+    outline: 2px rgb(168, 38, 38) solid;
+    margin-bottom: 120px;
+}
+.pricing {
+    outline: 2px rgb(168, 38, 38) solid;
+    margin-bottom: 120px;
+}
+.other {
+    outline: 2px rgb(168, 38, 38) solid;
+    margin-bottom: 120px;
+}
 /* Footer */
